# TempRepo

./: .gitignore  README.md  changeMN.c~  client  client.c  mkfs.myext2  mmap-test.c  p1.c  p1.cpp  reflect.h  server  server.c
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.jdt.core/: 3703194086.index  externalLibsTimeStamps  savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
Cpp/Socket/: main.c
bcc-python/: README.md  bitehist.py  disksnoop.py  hello_fields.py  hello_perf_output.py  hello_world.py  strlen_count.py  sync_timing.py  task_switch.py  urandomread.py  vfsreadlat.c  vfsreadlat.py
compiler/: Homework_10_1_b.java  Homework_2_5_b.java
compiler/lab1/: lab1  lab1.l  lex.yy.c  test-file
compiler/lab3/: lab3  lab3.sh  lab3.y  lab3_3150102210  lab3_3150102210.y  y.tab.c
coroutine/: CMakeLists.txt  awaiter.h  channel.h  channel_awaiter.h  executor.h  future_awaiter.h  generator.h  ioutils.cpp  ioutils.h  main.cpp  ret.h  sleep_awaiter.h  task.h  task_awaiter.h  task_promise.h  timer.h
cpp-object-storage-demo/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  ReadMe.md  client.cpp  client.h  client_main.cpp  file.cpp  file.h  meta.cpp  meta.h  object.cpp  object.h  server.cpp  server.h  server_main.cpp  threadpool.h
flink/: cep_data.txt  data.txt  pom.xml
go-gee-demo/gee-cache/: .gitignore  main.go
go-gee-demo/gee-cache/geecache/: cache.go  geecache.go  geecache_test.go  go.mod  http.go
go-gee-demo/gee-orm/: gee.db  geeorm.go  geeorm_test.go
go-gee-demo/gee-orm/clause/: clause.go  clause_test.go  generator.go
go-gee-demo/gee-rpc/: client.go  client_test.go  server.go  service.go  service_test.go
go-gee-demo/gee-web/: main.go
go-web-user-demo/: .gitignore  Makefile  ReadMe.md  go.mod  go.sum
go-web-user-demo/api/: main.go
go-web-user-demo/config/: http.yml  tcp.yml
go-web-user-demo/script/: init.sql
go-web-user-demo/templates/: home.gohtml  login.gohtml  nav.gohtml  profile.gohtml  register.gohtml
graphdb/neo4jdemo/: README.md  pom.xml
graphdb/spring-data-neo4j-demo/: pom.xml
java-sealed-record/: pom.xml
kafka/: pom.xml
micronaut/hello-world/: build.gradle
network/: server.c
opencode-demo2/: AGENTS.md
opencode-demo2/include/: SPMCQueue.h
opencode-demo2/src/: ipc_launcher.cpp
opencode-demo2/tests/: test_smpc_queue_simple.cpp  test_spmc_queue.cpp
opencode-vibe-demo/: CMakeLists.txt  README.md
opencode-vibe-demo/.cache/clangd/index/: FileProcessor.cpp.199F364CA8AB0300.idx  SPMCQueue.h.19D0F3FE99F944CD.idx  emplace_demo.cpp.E49F8AC56C594742.idx  producer.cpp.041EB0251150B816.idx  simple_test.cpp.94245CEE558822E3.idx  test_emplace.cpp.1E34EDF582584193.idx  test_smpc_queue_simple.cpp.F8B42B8B51F4986F.idx  test_spmc_queue.cpp.B73420DA16BD4ED3.idx  verify_basic.cpp.D68E2BFB57E79533.idx
opencode-vibe-demo/src/: consumer.cpp  producer.cpp
os/: changeMN.c  file.c  substitute.sh
rust-playground/http-server/: Cargo.toml
rust-playground/minigrep/: Cargo.toml
rust-playground/minigrep/src/: lib.rs  main.rs
scale-cube/: build.gradle  settings.gradle
siddhi/: pom.xml
spring/ssm-druid-demo/: pom.xml
tools/plot-tool/: main.py  requirements.txt
tools/ssh/: broadcast_ssh.py
zookeeper/ZkDemo/: README.md  pom.xml
(+164 files in other folders)
